<resources>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main">Healthy Together</string>
    <string name="title_activity_authenticate_fitbit">Authorization</string>
    <string name="title_activity_accept_buddy">Game Request</string>
    <string name="title_activity_pending_buddy_request">Remind Buddy</string>
    <string name="title_activity_select_cheer_template">Cheer Friend</string>
    <string name="title_activity_select_taunt_template">Taunt Friend</string>
    <string name="title_activity_invite_buddy">Invite Buddy</string>
    <string name="title_activity_main2">Healthy Together</string>
    <string name="title_activity_compose_message">Compose Message</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_log_history">Log History</string>
    <string name="app_name">Healthy Together</string>
    <string name="dummy_content">Happy\nTogether</string>
    <string name="dummy_button">Start</string>
    <string name="authenticate_msg">In order to use HealthyTogether, please allow it to access your Fitbit data.\n\nClick on the following button to perform the authorization.</string>
    <string name="authenticate_msg_continued">After you performed the authorization please click the button below to continue.</string>
    <string name="my_game">My Game</string>
    <string name="you_are_playing_with">You are playing with:</string>
    <string name="your_steps">Your Steps:</string>
    <string name="other_steps">Alice\'s Steps:</string>
    <string name="step_badges">Your Step Badges</string>
    <string name="floor_badges">Your Floor Badges</string>
    <string name="steps_until_next_badge">Your step score </string>
    <string name="floors_until_next_badge">Your floor score </string>
    <string name="until_next_badge">until next badge</string>
    <string name="my_badges">My Badges</string>
    <string name="cheer_friend">Cheer\nFriend</string>
    <string name="taunt_friend">Taunt\nFriend</string>
    <string name="pledge_confirm_title">Confirm Your Pledge</string>
    <string name="pledge_confirm_content_step">You are about to pledge</string>
    <string name="pledge_confirm_content_floor">You are about to pledge</string>
    <string name="yes_change_buddy">Yes, change buddy!</string>
    <string name="back_to_game">Back to\ngame</string>
    <string name="no_continue_to_game">No, back to game!</string>
    <string name="your_buddy_will_be_notified">Your buddy will be notified by e-mail.</string>
    <string name="are_you_sure_to_change">Are you sure you want change a buddy? </string>
    <string name="error_general">An error has occurred. Please try again later.</string>
    <string name="general_error_dialog_title">An error has occurred.</string>
    <string name="invite_intro">You don\'t have a friend yet. Who do you want to play with?</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_template_dialog">TemplateDialog</string>
    <string name="settings_alternate_title">Your account has been created!</string>
    <string name="connection_error_title">Connection Error </string>
    <string name="connection_error_message">No internet connection. Please check your connection to continue using HealthyTogether.</string>
    <string name="connection_error_retry">Try to reconnect</string>
    <string name="connection_toast_message">No internet connection. Please try again later.</string>
    <string name="ok_button_string">OK</string>
    <string name="switching_buddy_string">Switching Buddy</string>
    <string name="canceling_game">Canceling your game&#8230;</string>
    <string name="welcome">Welcome</string>
    <string name="settings_activity_invitation_status">Invitation Status</string>
    <string name="settings_progress_title">Loading</string>
    <string name="settings_progress_message">Checking your settings&#8230;</string>
    <string name="settings_no_invitation">You do not have any incoming invitations</string>
    <string name="settings_no_buddy_warning">You do not have a buddy to play with.</string>
    <string name="settings_incoming_request">See all incoming requests</string>
    <string name="main_no_buddy_warning">You do not have a buddy to play with. Please invite a person to continue playing.</string>
    <string name="authorize_button">Authorize</string>
    <string name="fitbit_checking">Checking the Fitbit Authorization&#8230;</string>
    <string name="fitbit_rationale">In order to visualize your steps and floors, make sure that you allowed HealthyTogether to access to your Fitbit account.</string>
    <string name="settings_fitbit_authentication">Fitbit Authorization</string>
    <string name="settings_fitbit_not_authenticated">To use HealthyTogether, you must authorise us to connect to your Fitbit account. Tap on the button below to complete authorization. You will be redirected to a webpage.</string>
    <string name="settings_fitbit_authenticated"> You have already connected HealthyTogether to your account. Tap on the button below if you want to check again. You will be redirected to a webpage.</string>
    <string name="social_network">Buddies</string>
    <string name="buddy_rule">In order to play the game, you need to pair with a person.</string>
    <string name="social_checking">Checking your connections&#8230;</string>
    <string name="the_game">The Game</string>
    <string name="settings_reminder">You can return here via Android options button.</string>
    <string name="continueGame">Continue the Game</string>
    <string name="logout">Logout</string>
    <string name="buddy_stopped_playing"> Sorry, but your buddy wants to play with someone else. Please find another buddy to continue playing.</string>
    <string name="invitation_rejected"> Sorry, but () rejected your invitation. Please find another buddy to continue playing.</string>
    <string name="send_invitation"> Send an Invitation </string>
    <string name="outgoing_invitation"> Pending invitation (1) </string>
    <string name="invitation_pending"> You have sent an invitation, but your invitee has not responded yet. </string>
    <string name="received_invitation"> You have some invitations. Check if you would like to accept them.</string>
    <string name="received_invitation_while_waiting"> Your invitee has not responded yet, and you have received some additional invitations. Check if you would like to accept them.</string>
    <string name="leave_buddy">Leave Buddy</string>
    <string name="currently_with">You are currently playing with </string>
    <string name="currently_playing">You are currently playing the game </string>
    <string name="invited_while_playing">You are currently playing the game, but you also have some other invitations. Check if you would like to accept them.</string>
    <string name="but_you_also_have">, but you also have some other invitations. Check if you would like to accept them.</string>
    <string name="invite_someone_else">Invite someone else</string>
    <string name="you_were_playing_with">You were playing with </string>
    <string name="and_now_unpaired">, and now you are unpaired. You can now start playing with another person. Who do you want to play with?</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="your_log">Your Log</string>
    <string name="mood">Mood?</string>
    <string name="history">History</string>
    <string name="social">Social?</string>
    <string name="food">Food?</string>
    <string name="activity">Activity?</string>
    <string name="you">You  </string>
    <string name="your">Your  </string>
    <string name="steps"> steps</string>
    <string name="floors"> floors</string>
    <string name="main_loading">loading&#8230;</string>
    <string name="log_after_connection">Your log will be automatically sent after establishing an internet connection.</string>
    <string name="change_buddy">Change Buddy </string>
    <string name="manual_sync">Manual Sync</string>
    <string name="other">Other</string>
    <string name="together">Together</string>
    <string name="alone">Alone</string>
    <string name="nothing_left">You do not have any sent or received invitations anymore. Who do you want to play with?</string>
    <string name="buddy_change">Buddy Change</string>
    <string name="steps_tab">Steps</string>
    <string name="floors_tab">Floors</string>
    <string name="main_synchronization_title">Synchronization</string>
    <string name="main_synchronization_content">Synchronizing your steps and floors&#8230;</string>
	<string name="exercises_tab">Exercises</string>
    <string name="sedentary_tab">Sedentary</string>
    <string name="customize_dialog_title">Customize Activity</string>
    <string name="customize_dialog_content">Please specify your customized activity</string>
    <string name="cancel_button">Cancel</string>
    <string name="your_activity">Your Activity</string>
    <string name="food_title">Food</string>
    <string name="mood_title">Your Mood</string>
    <string name="social_title">Social Info</string>
    <string name="positive_tab">Positive</string>
    <string name="negative_tab">Negative</string>
    <string name="log_successful">Log sent successfully</string>
    <string name="return_to_settings">OK</string>
    <string name="not_validated">Could not update your steps and floors. It appears that your Fitbit authorization was unsuccessful. Would you like to authorize again?</string>
    <string name="sync_failed">Synchronisation failed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mild">Mild</string>
    <string name="normal">Normal</string>
    <string name="strong">Strong</string>
    <string name="buddy_confirm_title">Ready to Play?</string>
    <string name="are_you_sure_to_play">Are you sure you want to play with</string>
    <string name="incomplete_log">Please specify the details for the log first.</string>
    <string name="log_send_error">Could not send the log. Please try again later.</string>
    <string name="congrats_title">Congratulations! You and your buddy achieved a new badge together!</string>
    <string name="congrats_steps_title">Congratulations! You and your buddy achieved a new steps badge!</string>
    <string name="congrats_floors_title">Congratulations! You and your buddy achieved a new floors badge!</string>
    <string name="congrats_content">Hint: you can earn a badge more quickly by encouraging your buddy to walk more.</string>
    <string name="type_message">Type Message</string>
    <string name="send_msg">Send</string>
    <string name="messages_progress_title">Messages</string>
    <string name="messages_progress_content">Loading your messages&#8230;</string>
    <string name="sending_your_message">Sending your message&#8230;</string>
    <string name="message_sent">Message sent.</string>
    <string name="message_sending_error">Could not send message. Please try again later.</string>
    <string name="message_buddy_left">Cannot send the message: your buddy has stopped playing with you.</string>
    <string name="message_ack_waiting">Your message is still being sent&#8230;</string>
    <string name="pick_a_template">Pick a template</string>
    <string name="retrieving_logs">retrieving the list of logs&#8230;</string>
    <string name="logs_dialog_title">Your logs</string>
    <string name="logs_dialog_content">Loading your logs&#8230;</string>
    <string name="social_info_changed">Social Info Changed!</string>
    <string name="mood_changed">Mood Changed!</string>
    <string name="authorization">Authorization</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="i_performed">I Performed the Authorization</string>
    <string name="pledge_confirm_button_text">Pledge</string>
</resources>