<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical">
    
    <!-- tools:context=".Main2Activity" -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp" >

            <TextView
                android:id="@+id/alertinfo2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:paddingTop="40dp"
                android:text="@string/pledge_confirm_title"
                android:textColor="@color/text_darkgrey"
                android:textStyle="bold" >
            </TextView>

			<View
			    android:id="@+id/alertinfoseparator"
                android:layout_width="fill_parent"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
                android:layout_height="1dip"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/alertinfo2"
                android:background="@color/darkgrey" />   
                 
            <TextView
                android:id="@+id/alertinfo3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/alertinfoseparator"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/pledge_confirm_content_step"
                android:textColor="@color/text_lightgrey" >
            </TextView>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
    <Button
        android:id="@+id/cancelbtn"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"        
        android:background="@drawable/cancelbutton_gray"
        android:onClick="onPledgePopupOkButtonClicked"
        android:text="@string/no_continue_to_game"        
        android:textColor="@color/white"
        android:textStyle="bold" >
    </Button>

    <Button
        android:id="@+id/okbtn"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
		android:background="@drawable/positivebutton"
        android:onClick="onPledgeConfirmButtonClicked"
        android:text="@string/pledge_confirm_button_text"
        android:textColor="@color/white"
        android:textStyle="bold" >
    </Button>
    </RelativeLayout>

</LinearLayout>