<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupFromSettings"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical"
    tools:context=".SettingsActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp" >

            <TextView
                android:id="@+id/alertinfoFromSettings2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:paddingTop="40dp"
                android:text="@string/are_you_sure_to_change"
                android:textColor="@color/text_darkgrey"
                android:textStyle="bold" >
            </TextView>

			<View
			    android:id="@+id/alertinfoseparator"
                android:layout_width="fill_parent"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
                android:layout_height="1dip"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/alertinfoFromSettings2"
                android:background="@color/darkgrey" />               
            
            
            <TextView
                android:id="@+id/alertinfoFromSettings3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/alertinfoseparator"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/your_buddy_will_be_notified"
                android:textColor="@color/text_lightgrey" >
            </TextView>
        </RelativeLayout>
    </LinearLayout>

	<RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
    <Button
        android:id="@+id/cancelbtn"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
		android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"    
        android:background="@drawable/cancelbutton_gray"
        android:onClick="onPopupOkButtonFromSettingsClicked"
        android:text="@string/cancel_button"
        android:textColor="@color/white"
        android:textStyle="bold" >
    </Button>

    <Button
        android:id="@+id/okbtn"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"            
        android:background="@drawable/positivebutton"
        android:onClick="onChangeBuddyButtonFromSettingsClicked"
        android:text="@string/yes_change_buddy"        
        android:textColor="@color/white"
        android:textStyle="bold" >
    </Button>
    </RelativeLayout>

</LinearLayout>